--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-    <script src="http://185.13.90.140:8081/socket.io/socket.io.js" type="text/javascript"></script>
+    <!--<script src="http://185.13.90.140:8081/socket.io/socket.io.js" type="text/javascript"></script>-->
 
     <!--
       manifest.json provides metadata used when your web app is added to the
